chore: update GitHub repository links to sapogeth/stvor_sdk

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
       <div class="nav-section">
         <div class="nav-title">Resources</div>
         <a href="/dashboard.html" class="nav-item">Dashboard</a>
-        <a href="https://github.com/izahii/stvor-api" class="nav-item" target="_blank">GitHub →</a>
+        <a href="https://github.com/sapogeth/stvor_sdk" class="nav-item" target="_blank">GitHub →</a>
       </div>
     </nav>
     
